--- a/templates/add_guest.html
+++ b/templates/add_guest.html
@@ -3,12 +3,8 @@
 {% block content %}
 <h2>Add Guest</h2>
 <form method="post">
-    <label>Name:</label><br>
-    <input type="text" name="name" required><br>
-    <label>RSVP (yes/no):</label><br>
-    <input type="text" name="rsvp" required><br>
-    <label>Dietary Restrictions:</label><br>
-    <input type="text" name="dietary"><br><br>
-    <button type="submit">Add Guest</button>
+  <label for="name">Name:</label>
+  <input type="text" name="name" id="name" required>
+  <button type="submit">Add Guest</button>
 </form>
 {% endblock %}
