--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,17 @@
 
 {% block content %}
 <h2>Guest List</h2>
+<p>
+  {{ attending_count }} guest{{ 's' if attending_count != 1 else '' }} attending, 
+  {{ declined_count }} declined
+</p>
 {% if guests %}
 <table>
     <tr>
         <th>Name</th>
         <th>RSVP</th>
-        <th>Menu</th>
+        <th>Dietary</th>
+        <th>Plus Ones</th>
         <th>Actions</th>
     </tr>
     {% for guest in guests %}
@@ -15,7 +20,11 @@
         <td>{{ guest.name }}</td>
         <td>{{ guest.rsvp }}</td>
         <td>{{ guest.dietary }}</td>
-        <td><a href="{{ url_for('delete_guest', index=loop.index0) }}">Delete</a></td>
+        <td>{{ guest.plus_ones }}</td>
+        <td>
+            <a href="{{ url_for('edit_guest', index=loop.index0) }}">Edit</a> |
+            <a href="{{ url_for('delete_guest', index=loop.index0) }}">Delete</a>
+        </td>
     </tr>
     {% endfor %}
 </table>
