--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>💍 Wedding Planner</h1>
+        <h1>My Wedding Planner</h1>
         <nav>
-            <a href="{{ url_for('index') }}">Guest List</a> |
+            <a href="{{ url_for('home') }}">Home</a> |
+            <a href="{{ url_for('index') }}">Guest List</a> | 
             <a href="{{ url_for('add_guest') }}">Add Guest</a>
         </nav>
         <hr>
