--- a/templates/index.html
+++ b/templates/index.html
@@ -31,4 +31,5 @@
 {% else %}
 <p>No guests yet. <a href="{{ url_for('add_guest') }}">Add one</a>.</p>
 {% endif %}
+<a href="{{ url_for('add_guest') }}">Add Guest</a>
 {% endblock %}
