--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,10 @@
         <h1>My Wedding Planner</h1>
         <nav>
             <a href="{{ url_for('home') }}">Home</a> |
-            <a href="{{ url_for('index') }}">Guest List</a> | 
-            <a href="{{ url_for('add_guest') }}">Add Guest</a>
+            <a> </a>
+            <a href="{{ url_for('index') }}">Guest List</a> |
+            <a> </a>
+            <a href="{{ url_for('venue') }}">Venue</a>
         </nav>
         <hr>
         {% block content %}{% endblock %}
