--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
 <ul style="list-style-type: none; padding: 0;">
     <li><a href="{{ url_for('add_guest') }}">➕ Add New Guest</a></li>
     <li><a href="{{ url_for('index') }}">👥 View Guest List</a></li>
-    <li><a href="{{ url_for('index') }}">📊 RSVP & Plus Ones Summary</a></li>
+    <li><a href="{{ url_for('venue') }}">🏛️ Venue Details</a></li>
+    <li><a href="{{ url_for('expenses') }}">💰Other Services</a></li>
 </ul>
 {% endblock %}
