--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,9 @@
             <a> </a>
             <a href="{{ url_for('index') }}">Guest List</a> |
             <a> </a>
-            <a href="{{ url_for('venue') }}">Venue</a>
+            <a href="{{ url_for('venue') }}">Venue</a> |
+            <a> </a>
+            <a href="{{ url_for('expenses') }}">Expenses</a>
         </nav>
         <hr>
         {% block content %}{% endblock %}
