added Budget Overview and Wedding Date

--- a/templates/add_expense.html
+++ b/templates/add_expense.html
@@ -3,11 +3,11 @@
 {% block content %}
 <h2>Add Expense</h2>
 <form method="post">
-    <label for="item">Item:</label>
-    <input type="text" name="item" id="item" required>
+    <label for="name">Item:</label>
+    <input type="text" name="name" id="name" required>
     <br />
-    <label for="cost">Cost:</label>
-    <input type="number" name="cost" id="cost" required>
+    <label for="price">Cost:</label>
+    <input type="number" name="price" id="price" required>
     <br />
     <label for="description">Description:</label>
     <textarea name="description" id="description" required></textarea>
