added Table organizations

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,5 +13,8 @@
     <li><a href="{{ url_for('expenses') }}">💰Other Services</a></li>
     <li><a href="{{ url_for('budget_overview') }}">💰 Budget Overview</a></li>
     <li><a href="{{ url_for('edit_date') }}">Edit Wedding Date</a></li>
+    <li><a href="{{ url_for('tasks') }}">📝 Task Manager</a></li>
+    <li><a href="{{ url_for('configure_tables') }}">🪑 Configure Guest Tables</a></li>
+    <li><a href="{{ url_for('tables_view') }}">👥 View Table Assignments</a></li>
 </ul>
 {% endblock %}
